# meteoservice

./: .gitignore  Dockerfile  README.md  gunicorn.conf.py  manage.py  pyproject.toml
certs/: cert.pem  key.pem
meteoservice/: asgi.py  settings.py  urls.py  wsgi.py
weather_app/: __init__.py  admin.py  api_urls.py  api_views.py  apps.py  forms.py  models.py  resources.py  serializers.py  signals.py  tests.py  urls.py  validators.py  views.py
weather_app/fixtures/: cities.yaml
weather_app/migrations/: 0001_initial.py  0002_alter_city_options_alter_favorite_options_city_users_and_more.py  0003_city_photo.py  0004_alter_favorite_user_id_alter_city_users_delete_user.py  0005_profile.py  0006_alter_favorite_added_at_and_more.py  0007_supportrequest.py  0008_alter_city_options.py
weather_app/templates/: base.html  city_confirm_delete.html  city_detail.html  city_form.html  city_list.html  city_search.html  forecast_list.html  my_favorites.html  profile.html
weather_app/templates/registration/: login.html  logout.html  register.html
weather_app/templates/support/: dashboard.html  detail.html  request.html
